package Ejercicio3;

public class Usuario {
    private String Nombre;
    private String Apellido;
    private int Edad;
    private int Numero_Tarjeta;
    private Direccion[] Domicilios;
    private Pedido Pedidos;
    
    public Usuario(){
        
    }
    
    public Usuario(String Nombre, String Apellido, int Edad){
        
    }
}
