@startuml

abstract class Producto{
    +id : int
    +nombre : String
    +stock: boolean
}

class ProductoFisico{
    +peso : float
    +alto : float
    +ancho : float
    +largo : float
    +coste_transporte : float

}

class ProductoVirtual{
    +numero_licencia: String

}

class Usuario{
    +nombre: String
    +apellido: String
    +edad: int
    +direcciones: Direccion[]
    +direcciones_facturacion: Direccion[]
    #numero_tarjeta: int

    ' Getter
    void get_direccion()

    ' Setter
    void set_direccion()
}

class Direccion{
    +pais: String
    +municipio: String
    +departamento: String
    +direccion: String
    +observaciones: String
    +facturacion: boolean
    +correo_electronico: String
}

class Pedido{
    +direccion_entrega: Direccion
    +direccion_facturacion: Direccion
    +estado_pedido: String
}

Producto <|-- ProductoFisico
Producto <|-- ProductoVirtual
Usuario o-- Direccion
Pedido *-- Direccion
Pedido "1..*" o-- ProductoFisico
Pedido "1..1" o-- ProductoVirtual
Usuario o-- Pedido
@enduml